# NewByte-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  cpp.hint
.github/workflows/: static_analysis.yml
Assets/materials/: placeholder.material
Assets/res/: Cube1.mtl  Cube22.mtl  Tactical_Lumine(2).mtl  plastic.material
Assets/scripts/: sphere_movement.lua  trigger.lua
Assets/shaders/: ADS.fs  ADS.vs  DiffuseReflection.fs  arrow.fs  brdf.fs  config.nbsd  config.shader  equi_to_cube.fs  equi_to_cube.vs  gizmoShader.fs  gizmoShader.vs  grid.fs  grid.vs  infinite_grid.fs  infinite_grid.vs  irradiance.fs  irradiance.vs  lightPass.vs  pbr_lit.fs  pbr_lit.vs  prefilter.fs  prefilter.vs  quadShader.fs  ui.fs  (+9 more)
Common/: CMakeLists.txt  Color.hpp  NbCore.hpp  NbRect.hpp
Engine/: CMakeLists.txt
Engine/dependencies/glad/include/glad/: glad.h
Engine/dependencies/glad/src/: glad.c
Engine/dependencies/sol/: config.hpp  forward.hpp  sol.hpp
Engine/res/: untitled2_.mtl
Engine/shaders/: ADS.fs  ADS.vs  DiffuseReflection.vs  aabb.fs  arrow.gs  arrow.vs  config.nbsd  lightVisulize.fs  lightVisulize.vs  skybox.fs  skybox.vs  vert.fs  vertFlat.fs
Engine/src/: AABB.hpp  BVH.hpp  Core.hpp  Debug.cpp  Debug.hpp  Fatal.cpp  Fatal.hpp  MemoryTracker.cpp  MemoryTracker.hpp  NbCommon.hpp  Subsystems.cpp  Subsystems.hpp  Window.cpp  Window.hpp  main.cpp
Engine/src/Common/: StringUtils.cpp  StringUtils.hpp
Engine/src/Core/: Engine.cpp  Engine.hpp  EngineSettings.cpp  EngineSettings.hpp  ShaderSystem.cpp  ShaderSystem.hpp
Engine/src/ECS/: Ecs.cpp  Ecs.hpp
Engine/src/Error/: ErrorConsoleLogger.cpp  ErrorConsoleLogger.hpp  ErrorConsolePrinter.cpp  ErrorConsolePrinter.hpp  ErrorManager.cpp  ErrorManager.hpp  IErrorPrinter.cpp  IErrorPrinter.hpp
Engine/src/Input/: Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Engine/src/Loaders/: AsimpLoader.hpp  BitmapLoader.cpp  BitmapLoader.hpp  ILoader.cpp  ILoader.hpp  IhdrLoader.cpp  IhdrLoader.hpp  MaterialLoader.cpp  MaterialLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  PngLoader.cpp  PngLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
Engine/src/Loaders/Factory/: IFactoryLoader.hpp  IhdrFactory.cpp  IhdrFactory.hpp  MaterialFactory.cpp  MaterialFactory.hpp  ModelFactory.hpp  ObjFactory.cpp  ObjFactory.hpp  ShaderFactory.cpp  ShaderFactory.hpp  TextureFactory.cpp  TextureFactory.hpp
Engine/src/Loaders/JSON/: Json.cpp  Json.hpp  JsonLexer.cpp  JsonLexer.hpp  JsonParser.cpp  JsonParser.hpp  JsonWriter.cpp  JsonWriter.hpp  Node.cpp  Node.hpp
Engine/src/Manager/: AssetImporter.cpp  AssetImporter.hpp  ResourceManager.cpp  ResourceManager.hpp
Engine/src/Math/: AABB.cpp  AABB.hpp  AABB3D.hpp  Constants.hpp  Math.hpp  Plane.hpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.hpp
Engine/src/Math/Collision/: OBB.hpp
Engine/src/Math/Matrix/: Mat.hpp  Mat4.hpp  Matrix.hpp  Transformation.hpp
Engine/src/Math/RayCast/: RayPicker.cpp  RayPicker.hpp
Engine/src/Physics/: Physics.cpp  Physics.hpp  PhysicsLayers.hpp  TerrainCollider.cpp  TerrainCollider.hpp
Engine/src/Renderer/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  ContextMeshCache.cpp  ContextMeshCache.hpp  Cubemap.hpp  IFrameBuffer.hpp  IRenderAPI.cpp  IRenderAPI.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  PipelineCache.cpp  PipelineCache.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererStructures.cpp  RendererStructures.hpp  Scene.cpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.hpp  TransformProxy.hpp
Engine/src/Renderer/Objects/: Objects.cpp  Objects.hpp
Engine/src/Renderer/OpenGL/: DepthBuffer.cpp  DepthBuffer.hpp  EBO.cpp  EBO.hpp  FBO.cpp  FBO.hpp  IBuffer.cpp  IBuffer.hpp  OpenGLCubemap.cpp  OpenGLCubemap.hpp  OpenGLRender.cpp  OpenGLRender.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGlShader.cpp  OpenGlShader.hpp  PostProcessFbo.cpp  PostProcessFbo.hpp  Shader.cpp  Shader.hpp  ShaderConstants.hpp  ShadowMapFbo.cpp  ShadowMapFbo.hpp  VBO.cpp  VBO.hpp  VertexArray.cpp  VertexArray.hpp
Engine/src/Resources/: IResource.hpp  IhdrResource.hpp  MaterialAsset.cpp  MaterialAsset.hpp  ResourceDispatcher.cpp  ResourceDispatcher.hpp  ShaderSource.cpp  ShaderSource.hpp  TextureAsset.hpp
Engine/src/Scripting/: ScriptComponent.cpp  ScriptComponent.hpp  ScriptEngine.cpp  ScriptEngine.hpp
Engine/src/Serialize/: IArchive.cpp  IArchive.hpp  ISerializable.cpp  ISerializable.hpp  JsonArchive.cpp  JsonArchive.hpp
Engine/src/Shared/: HuffmanTree.hpp
Engine/src/Templates/: BinaryTree.hpp  NTree.hpp
Engine/src/UI/: Button.cpp  Button.hpp
Engine/src/Utils/: BitReader.cpp  BitReader.hpp  DeflateDecoder.cpp  DeflateDecoder.hpp  Indexator.cpp  Indexator.hpp  PrimitiveNameManager.cpp  PrimitiveNameManager.hpp  Timer.cpp  Timer.hpp
SDK/: CMakeLists.txt
SDK/Assets/Locales/: ru-RU.locale
SDK/src/: App.cpp  App.hpp  AssetManger.cpp  AssetManger.hpp  ComponentBrowser.hpp  FileSystemModel.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  ImportWindow.cpp  ImportWindow.hpp  MaterialEditor.cpp  MaterialEditor.hpp  PrimitiveCreationDialog.hpp  PropertiesWindow.cpp  PropertiesWindow.hpp  SceneModel.hpp  SceneWindow.cpp  SceneWindow.hpp  TextureEditor.cpp  TextureEditor.hpp  UiStore.cpp  UiStore.hpp  main.cpp
SDK/src/Ui/: Button.cpp  Button.hpp  ComboBox.cpp  ComboBox.hpp  IWidget.cpp  IWidget.hpp  RadioGroup.cpp  RadioGroup.hpp  Slider.hpp  UiMapper.cpp  UiMapper.hpp
SdkUiMock/: index.html
nbstl/: CMakeLists.txt
nbstl/src/: Alghorithm.hpp  Any.hpp  Array.hpp  BitManipulation.hpp  CharUtils.hpp  DynamicFlatMatrix.hpp  FlatMatrix.hpp  Hash.hpp  Iterator.hpp  Memory.hpp  NTree.hpp  NonOwningPtr.hpp  Span.hpp  StdUtils.hpp  String.hpp  TypeTraits.hpp  Types.hpp  Utility.hpp  Utils.hpp  Uuid.hpp  Vector.hpp
nbstl/src/Math/: Math.hpp  NbMath.hpp
nbstl/src/Reflection/: Reflection.hpp
tests/: CMakeLists.txt
tools/: README.md  file_gen.py  file_gen_config.json
(+20 files in other folders)
